# ann-benchmark

./: .gitignore  CMakeLists.txt
app/src/: CMakeLists.txt
app/src/hcnng-test/: CMakeLists.txt
app/src/hcnng-test/hcnng-all-test/: CMakeLists.txt  hcnng-all-test.cpp
app/src/hnswlib-test/: CMakeLists.txt
app/src/hnswlib-test/enron-test/: CMakeLists.txt  enron-hnswlib-test.cpp
app/src/hnswlib-test/gist-test/: CMakeLists.txt  gist-hnswlib-test.cpp
app/src/hnswlib-test/hnswlib-all-test/: CMakeLists.txt  hnswlib-all-test.cpp
app/src/hnswlib-test/sift-test/: CMakeLists.txt  sift-hnswlib-test.cpp
app/src/hnswlib-test/siftsmall-test/: CMakeLists.txt  siftsmall-hnswlib-test.cpp
app/src/hnswlib-test/trevi-test/: CMakeLists.txt  trevi-hnswlib-test.cpp
app/src/nsg-test/: CMakeLists.txt
app/src/nsg-test/gist-test/: CMakeLists.txt  gist-test.cpp
app/src/nsg-test/nsg-all-test/: CMakeLists.txt  nsg-all-test.cpp
app/src/nsg-test/sift-test/: CMakeLists.txt  sift-test.cpp
app/src/onng-test/: CMakeLists.txt
app/src/onng-test/gist-test/: CMakeLists.txt  gist-onng-test.cpp
app/src/onng-test/onng-all-test/: CMakeLists.txt  onng-all-test.cpp
app/src/onng-test/sift-test/: CMakeLists.txt  sift-onng-test.cpp
app/src/onng-test/siftsmall-test/: CMakeLists.txt  siftsmall-onng-test.cpp
app/src/panng-test/: CMakeLists.txt
app/src/panng-test/enron-test/: CMakeLists.txt  enron-panng-test.cpp
app/src/panng-test/sift-test/: CMakeLists.txt  sift-panng-test.cpp
app/src/panng-test/siftsmall-test/: CMakeLists.txt  siftsmall-panng-test.cpp
app/src/panng-test/trevi-test/: CMakeLists.txt  trevi-panng-test.cpp
app/src/qbg-test/: CMakeLists.txt
app/src/qg-test/: CMakeLists.txt
app/src/qg-test/trevi-test/: CMakeLists.txt  trevi-qg-test.cpp
app/src/rnndescent-test/: CMakeLists.txt  rnndescent-all-test.cpp
app/src/scann-test/: scann-all-test.py
app/src/suco-test/: CMakeLists.txt
app/src/suco-test/suco-all-test/: CMakeLists.txt  suco-all-test.cpp
configured/: config.h.in
lib/: CMakeLists.txt
lib/NGT/: CMakeLists.txt
lib/NSG/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/NSG/include/efanna2e/: distance.h  index_nsg.h  neighbor.h  util.h
lib/NSG/src/: CMakeLists.txt  Makefile  cmake_install.cmake  index_nsg.cpp
lib/NSG/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  test_nsg_index  test_nsg_index.cpp  test_nsg_optimized_search.cpp  test_nsg_search  test_nsg_search.cpp
lib/ParlayANN/: CMakeLists.txt
lib/ParlayANN/algorithms/: CMakeLists.txt
lib/ParlayANN/algorithms/HCNNG/: CMakeLists.txt
lib/ParlayANN/algorithms/bench/: Makefile
lib/ParlayANN/rangeSearch/bench/: Makefile
lib/RNNDescent/rnn-descent/: IndexRNNDescent.cpp  IndexRNNDescent.h
lib/SuCo/: BUILD.md  CMakeLists.txt  README.md
lib/hnswlib/: CMakeLists.txt
result/hcnng-test/audio/: audio_recall_qps_result.csv
result/hcnng-test/cifar/: cifar_recall_qps_result.csv
result/hcnng-test/deep/: deep_recall_qps_result.csv
result/hcnng-test/enron/: enron_recall_qps_result.csv
result/hcnng-test/gist/: gist_recall_qps_result.csv
result/hcnng-test/glove/: glove_recall_qps_result.csv
result/hcnng-test/imagenet/: imagenet_recall_qps_result.csv
result/hcnng-test/millionsong/: millionsong_recall_qps_result.csv
result/hcnng-test/mnist/: mnist_recall_qps_result.csv
result/hcnng-test/notre/: notre_recall_qps_result.csv
result/hcnng-test/nuswide/: nuswide_recall_qps_result.csv
result/hcnng-test/sift/: sift_recall_qps_result.csv
result/hcnng-test/siftsmall/: siftsmall_recall_qps_result.csv
result/hcnng-test/sun/: sun_recall_qps_result.csv
result/hcnng-test/trevi/: trevi_recall_qps_result.csv
result/hcnng-test/ukbench/: ukbench_recall_qps_result.csv
result/hcnng-test/wikipedia-2024-06-bge-m3-zh/: wikipedia-2024-06-bge-m3-zh_recall_qps_result.csv
result/hnswlib-test/audio/: audio_recall_qps_result.csv
result/hnswlib-test/cifar/: cifar_recall_qps_result.csv
result/hnswlib-test/deep/: deep_recall_qps_result.csv
result/hnswlib-test/enron/: enron_recall_qps_result.csv
result/hnswlib-test/gist/: gist_recall_qps_result.csv
result/hnswlib-test/glove/: glove_recall_qps_result.csv
result/hnswlib-test/imagenet/: imagenet_recall_qps_result.csv
result/hnswlib-test/millionsong/: millionsong_recall_qps_result.csv
result/hnswlib-test/mnist/: mnist_recall_qps_result.csv
result/hnswlib-test/notre/: notre_recall_qps_result.csv
result/hnswlib-test/nuswide/: nuswide_recall_qps_result.csv
result/hnswlib-test/sift/: sift_recall_qps_result.csv
result/hnswlib-test/siftsmall/: siftsmall_recall_qps_result.csv
result/hnswlib-test/sun/: sun_recall_qps_result.csv
result/hnswlib-test/trevi/: trevi_recall_qps_result.csv
result/hnswlib-test/ukbench/: ukbench_recall_qps_result.csv
result/hnswlib-test/wikipedia-2024-06-bge-m3-zh/: wikipedia-2024-06-bge-m3-zh_recall_qps_result.csv
result/nsg-test/audio/: audio_recall_qps_result.csv
result/nsg-test/cifar/: cifar_recall_qps_result.csv
result/nsg-test/deep/: deep_recall_qps_result.csv
result/nsg-test/enron/: enron_recall_qps_result.csv
result/nsg-test/gist/: gist_recall_qps_result.csv
result/nsg-test/glove/: glove_recall_qps_result.csv
result/nsg-test/imagenet/: imagenet_recall_qps_result.csv
result/nsg-test/millionsong/: millionsong_recall_qps_result.csv
result/nsg-test/mnist/: mnist_recall_qps_result.csv
result/nsg-test/notre/: notre_recall_qps_result.csv
result/nsg-test/nuswide/: nuswide_recall_qps_result.csv
result/nsg-test/sift/: sift_recall_qps_result.csv
result/nsg-test/siftsmall/: siftsmall_recall_qps_result.csv
result/nsg-test/sun/: sun_recall_qps_result.csv
result/nsg-test/trevi/: trevi_recall_qps_result.csv
result/nsg-test/ukbench/: ukbench_recall_qps_result.csv
result/nsg-test/wikipedia-2024-06-bge-m3-zh/: wikipedia-2024-06-bge-m3-zh_recall_qps_result.csv
result/onng-test/audio/: audio_recall_qps_result.csv
result/onng-test/cifar/: cifar_recall_qps_result.csv
result/onng-test/deep/: deep_recall_qps_result.csv
tools/: create-folders.py  plot.py
(+79 files in other folders)
